--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -1,24 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kJZ-k1-4sQ">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movies View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MoviesViewController" customModule="Flix" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="stv-tR-xkH">
+                                <rect key="frame" x="0.0" y="88" width="375" height="724"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MoviesCell" rowHeight="144" id="LTC-ha-Abw" customClass="MoviesCell" customModule="Flix" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="144"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LTC-ha-Abw" id="IvH-Q5-dIl">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="143.66666666666666"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GPo-P6-RFx">
+                                                    <rect key="frame" x="11" y="11" width="92" height="122"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="122" id="Ro3-N6-KUb"/>
+                                                        <constraint firstAttribute="width" constant="92" id="nX5-wa-zFH"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXk-yp-CTF">
+                                                    <rect key="frame" x="111" y="10.999999999999998" width="241" height="27.333333333333329"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fVH-4e-rXC">
+                                                    <rect key="frame" x="111" y="40.666666666666664" width="238" height="92.333333333333343"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="fVH-4e-rXC" secondAttribute="trailing" constant="11" id="0sy-TP-pBA"/>
+                                                <constraint firstItem="GPo-P6-RFx" firstAttribute="centerY" secondItem="IvH-Q5-dIl" secondAttribute="centerY" id="Cap-fg-WWq"/>
+                                                <constraint firstItem="GPo-P6-RFx" firstAttribute="leading" secondItem="IvH-Q5-dIl" secondAttribute="leading" constant="11" id="JLw-Cq-9l3"/>
+                                                <constraint firstItem="fVH-4e-rXC" firstAttribute="leading" secondItem="NXk-yp-CTF" secondAttribute="leading" id="P79-lj-fK8"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="NXk-yp-CTF" secondAttribute="trailing" constant="8" id="Q0z-XC-pcy"/>
+                                                <constraint firstItem="fVH-4e-rXC" firstAttribute="bottom" secondItem="GPo-P6-RFx" secondAttribute="bottom" id="Xz6-ws-jmF"/>
+                                                <constraint firstItem="NXk-yp-CTF" firstAttribute="top" secondItem="GPo-P6-RFx" secondAttribute="top" id="cHJ-YN-YIB"/>
+                                                <constraint firstItem="fVH-4e-rXC" firstAttribute="top" secondItem="NXk-yp-CTF" secondAttribute="bottom" constant="2.5" id="ks6-tO-9wv"/>
+                                                <constraint firstItem="NXk-yp-CTF" firstAttribute="leading" secondItem="GPo-P6-RFx" secondAttribute="trailing" constant="8" id="zY4-qD-7H1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="movieDescription" destination="fVH-4e-rXC" id="Rk3-wt-13F"/>
+                                            <outlet property="movieImageView" destination="GPo-P6-RFx" id="0cn-UF-X3v"/>
+                                            <outlet property="movieTitle" destination="NXk-yp-CTF" id="5Ph-Ry-eKL"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="stv-tR-xkH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9e7-2D-4Ox"/>
+                            <constraint firstItem="stv-tR-xkH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="c5m-bR-4dK"/>
+                            <constraint firstAttribute="bottom" secondItem="stv-tR-xkH" secondAttribute="bottom" id="e6p-Q8-pnJ"/>
+                            <constraint firstItem="stv-tR-xkH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yYc-VN-dIE"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="La3-TT-m9g"/>
+                    <connections>
+                        <outlet property="tableView" destination="stv-tR-xkH" id="K5m-Qx-yot"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="984.79999999999995" y="-671.67487684729065"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8wo-Xj-Tcj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kJZ-k1-4sQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xo1-c3-ZNb">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="EMG-3C-bbE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L5W-vB-4hr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="184.80000000000001" y="-670.61469265367316"/>
         </scene>
     </scenes>
 </document>
